WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217951
WebDriver: sequence of char key press is not supported
https://bugs.webkit.org/show_bug.cgi?id=217951
Summary
WebDriver: sequence of char key press is not supported
Carlos Garcia Campos
Reported
2020-10-20 06:13:56 PDT
We are assuming there can be only one char key pressed at a time. There's on test failing because of this: imported/w3c/webdriver/tests/perform_actions/key_events.py::test_sequence_of_keydown_printable_keys_sends_events
Attachments
Patch
(7.42 KB, patch)
2020-10-20 06:18 PDT
,
Carlos Garcia Campos
bburg
: review-
Details
Formatted Diff
Diff
Patch
(8.53 KB, patch)
2020-10-22 03:01 PDT
,
Carlos Garcia Campos
bburg
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-10-20 06:18:20 PDT
Created
attachment 411859
[details]
Patch
Blaze Burg
Comment 2
2020-10-20 08:34:50 PDT
Comment on
attachment 411859
[details]
Patch r- due to failing build. Overall this looks like an improvement. I am worried about iteration order of the char keys being undefined and causing flaky test failures. Can we use ListHashSet to avoid this?
Carlos Garcia Campos
Comment 3
2020-10-21 00:34:27 PDT
(In reply to Brian Burg from
comment #2
)
> Comment on
attachment 411859
[details]
> Patch > > r- due to failing build.
EWS is red because the patch depends on
bug #217950
.
> Overall this looks like an improvement. I am worried about iteration order > of the char keys being undefined and causing flaky test failures. Can we use > ListHashSet to avoid this?
I'll submit a rebased patch after landing
bug #217950
using LinkHashSet
Carlos Garcia Campos
Comment 4
2020-10-22 03:01:29 PDT
Created
attachment 412080
[details]
Patch
Blaze Burg
Comment 5
2020-10-26 17:00:25 PDT
Comment on
attachment 412080
[details]
Patch r=me
Radar WebKit Bug Importer
Comment 6
2020-10-27 06:14:47 PDT
<
rdar://problem/70719725
>
Carlos Garcia Campos
Comment 7
2020-10-27 06:26:59 PDT
Committed
r269035
: <
https://trac.webkit.org/changeset/269035
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug