WebDriver: sequence of char key press is not supported https://bugs.webkit.org/show_bug.cgi?id=217951

Reviewed by Brian Burg.

Source/WebKit:

We are assuming there can be only one char key pressed at a time. Use a HashSet to store the currently pressed
char keys and the handle them the same way we do with virtual keys.

Fixes: imported/w3c/webdriver/tests/perform_actions/key_events.py::test_sequence_of_keydown_printable_keys_sends_events

* UIProcess/Automation/SimulatedInputDispatcher.cpp:
(WebKit::SimulatedInputDispatcher::transitionInputSourceToState):
* UIProcess/Automation/SimulatedInputDispatcher.h:
* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::performInteractionSequence):

WebDriverTests:

Remove expectations for test that is now passing.

* TestExpectations.json:

Canonical link: https://commits.webkit.org/230926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269035 268f45cc-cd09-0410-ab3c-d52691b4dbfc